--- a/src/main/resources/frontend/books/popular.html
+++ b/src/main/resources/frontend/books/popular.html
@@ -25,6 +25,7 @@
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
+<!--  todo replace with fragment      -->
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
           </li>
