--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -34,7 +34,7 @@
             <div class="Slider-box Cards" data-load="recommended" data-loadoffset="8" data-loadlimit="20">
               <div class="Slider-item" th:each="book : ${recommendedBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a> //todo
                     <div class="Card-content">
                       <strong class="Card-title"><a href="/books/slug.html" th:text="${book.title}">Техника</a>
                       </strong>
