--- a/src/main/resources/frontend/documents/index.html
+++ b/src/main/resources/frontend/documents/index.html
@@ -29,7 +29,7 @@
         </h1>
         <div class="Section">
           <div class="Documents">
-            <div class="Documents-wrap"><a class="Documents-item" href="/documents/slug.html">
+            <div class="Documents-wrap"><a class="Documents-item" href="/documents/slug.html" th:href="@{/documents/slug}">
                 <div class="Documents-image"><img src="/assets/img/content/documents/1.jpg" alt="1.jpg"/>
                 </div>
                 <div class="Documents-content">
@@ -39,7 +39,7 @@
                   </p>
                   <p>Согласно закону, публичная оферта – это предложение, которое, во-первых, адресовано неопределенному кругу лиц, во-вторых, содержит все существенные условия договора, и, в-третьих, достаточно определенно выражает намерение предприятия-оферента считать себя заключившим договор с любым
                   </p>
-                </div></a><a class="Documents-item" href="/documents/slug.html">
+                </div></a><a class="Documents-item" href="/documents/slug.html" th:href="@{/documents/slug}">
                 <div class="Documents-image"><img src="/assets/img/content/documents/2.jpg" alt="2.jpg"/>
                 </div>
                 <div class="Documents-content">
