--- a/src/main/resources/frontend/faq.html
+++ b/src/main/resources/frontend/faq.html
@@ -26,7 +26,7 @@
     <div class="wrap">
       <main class="Middle-main">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          <li class="breadcrumbs-item" th:replace="~{fragments/breadcrumb_main_fragment :: breadcrumbMainFragment}"><a href="/index.html">Главная</a>
           </li>
           <li class="breadcrumbs-item breadcrumbs-item_current"><span>Помощь</span>
           </li>
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="FAQ-footer">
-            <p class="FAQ-link">Или&#32;<a href="/contacts.html">свяжитесь с нами</a>
+            <p class="FAQ-link">Или&#32;<a href="/contacts.html" th:href="@{/contacts}">свяжитесь с нами</a>
             </p>
           </div>
         </div>
