--- a/src/main/resources/frontend/myarchive.html
+++ b/src/main/resources/frontend/myarchive.html
@@ -26,9 +26,9 @@
     <div class="wrap">
       <main class="Middle-main">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          <li class="breadcrumbs-item" th:replace="~{fragments/breadcrumb_main_fragment :: breadcrumbMainFragment}"><a href="/index.html">Главная</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/profile.html">Мой профиль</a>
+          <li class="breadcrumbs-item"><a href="/profile.html" th:href="@{/profile}">Мой профиль</a>
           </li>
           <li class="breadcrumbs-item breadcrumbs-item_current"><span>Мои книги</span>
           </li>
@@ -37,7 +37,7 @@
           <div class="Section-header">
             <h1 class="Section-title">Мои книги
             </h1>
-            <div class="Section-header-links"><a class="Section-header-link" href="/my.html">Непрочитанные</a><span class="Section-header-link Section-header-link_ACTIVE">Архив</span>
+            <div class="Section-header-links"><a class="Section-header-link" href="/my.html" th:href="@{/my}">Непрочитанные</a><span class="Section-header-link Section-header-link_ACTIVE">Архив</span>
             </div>
           </div>
           <div class="Cards">
