--- a/src/main/resources/frontend/profile.html
+++ b/src/main/resources/frontend/profile.html
@@ -129,7 +129,7 @@
                             <strong>-480 р.
                             </strong></span>
                         </td>
-                        <td>Покупка книги&#32;<a href="/books/slug.html">История Беларуси</a>
+                        <td>Покупка книги&#32;<a href="/books/slug.html" th:href="@{/books/slug}">История Беларуси</a>
                         </td>
                       </tr>
                       <tr>
