--- a/src/main/resources/frontend/books/popular.html
+++ b/src/main/resources/frontend/books/popular.html
@@ -25,11 +25,10 @@
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
-<!--  todo replace with fragment      -->
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          <li class="breadcrumbs-item" th:replace="~{fragments/breadcrumb_main_fragment :: breadcrumbMainFragment}"><a href="/index.html">Главная</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/genres/index.html">Книги</a>
+          <li class="breadcrumbs-item" th:replace="~{fragments/breadcrumb_books_fragment :: breadcrumbBooksFragment}"><a href="/genres/index.html">Книги</a>
           </li>
           <li class="breadcrumbs-item breadcrumbs-item_current"><span>Популярное</span>
           </li>
