--- a/src/main/resources/frontend/documents/slug.html
+++ b/src/main/resources/frontend/documents/slug.html
@@ -32,9 +32,9 @@
     <div class="wrap">
       <main class="Middle-main">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          <li class="breadcrumbs-item" th:replace="~{fragments/breadcrumb_main_fragment :: breadcrumbMainFragment}"><a href="/index.html">Главная</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/documents/index.html">Документы</a>
+          <li class="breadcrumbs-item"><a href="/documents/index.html" th:href="@{/documents}">Документы</a>
           </li>
           <li class="breadcrumbs-item breadcrumbs-item_current"><span>Политика обработки персональных данных</span>
           </li>
