--- a/src/main/resources/frontend/genres/slug.html
+++ b/src/main/resources/frontend/genres/slug.html
@@ -26,11 +26,11 @@
     <div class="wrap">
       <main class="Middle-main">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          <li class="breadcrumbs-item" th:replace="~{fragments/breadcrumb_main_fragment :: breadcrumbMainFragment}"><a href="/index.html">Главная</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/genres/index.html">Жанры</a>
+          <li class="breadcrumbs-item"><a href="/genres/index.html" th:href="@{/genres}">Жанры</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/genres/index.html">Легкое чтение</a>
+          <li class="breadcrumbs-item"><a href="/genres/index.html" th:href="@{/genres}">Легкое чтение</a>
           </li>
           <li class="breadcrumbs-item breadcrumbs-item_current"><span>Детективы</span>
           </li>
