--- a/src/main/resources/frontend/my.html
+++ b/src/main/resources/frontend/my.html
@@ -26,9 +26,9 @@
     <div class="wrap">
       <main class="Middle-main">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          <li class="breadcrumbs-item" th:replace="~{fragments/breadcrumb_main_fragment :: breadcrumbMainFragment}"><a href="/index.html">Главная</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/profile.html">Мой профиль</a>
+          <li class="breadcrumbs-item"><a href="/profile.html" th:href="@{/profile}">Мой профиль</a>
           </li>
           <li class="breadcrumbs-item breadcrumbs-item_current"><span>Мои книги</span>
           </li>
