--- a/src/main/resources/frontend/signin.html
+++ b/src/main/resources/frontend/signin.html
@@ -87,7 +87,7 @@
                 </button>
               </div>
             </div>
-            <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html">Зарегистрироваться</a>
+            <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html" th:href="@{/signup}">Зарегистрироваться</a>
             </div>
           </div>
         </form>
