--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -34,9 +34,9 @@
             <div class="Slider-box Cards" data-load="recommended" data-loadoffset="8" data-loadlimit="20">
               <div class="Slider-item" th:each="book : ${recommendedBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:href="@{/books/slug}" th:text="${book.title}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${book.title}">Техника</a>
                       </strong>
                       <div class="Card-description" th:text="${book.author}">Кондратенко Валерий Петрович
                       </div>
@@ -64,11 +64,11 @@
             <div class="Slider-box Cards" data-load="recent" data-loadoffset="8" data-loadlimit="20">
               <div class="Slider-item">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
                       <div class="Card-sale">30% скидка
                       </div></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:href="@{/books/slug}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Техника</a>
                       </strong>
                       <div class="Card-description">Кондратенко Александр Петрович
                       </div>
