--- a/src/main/resources/frontend/books/recent.html
+++ b/src/main/resources/frontend/books/recent.html
@@ -21,7 +21,7 @@
           | браузера здесь&nbsp;
       | для правильного отображения сайта.
   -->
-  <header th:replace="~{fragments/header_fragment :: headerFragment}"></header>
+  <header th:replace="~{fragments/header_fragment :: headerFragment('recent')}"></header>
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
