--- a/src/main/resources/frontend/profile.html
+++ b/src/main/resources/frontend/profile.html
@@ -21,7 +21,7 @@
           | браузера здесь&nbsp;
       | для правильного отображения сайта.
   -->
-  <header th:replace="~{fragments/header_fragment :: headerFragment}"></header>
+  <header th:replace="~{fragments/header_fragment :: headerFragment('main')}"></header>
   <div class="Middle">
     <div class="Middle-top">
       <div class="wrap">
