--- a/src/main/resources/frontend/search/index.html
+++ b/src/main/resources/frontend/search/index.html
@@ -21,7 +21,7 @@
           | браузера здесь&nbsp;
       | для правильного отображения сайта.
   -->
-  <header th:replace="~{fragments/header_fragment :: headerFragment}"></header>
+  <header th:replace="~{fragments/header_fragment :: headerFragment('main')}"></header>
   <div class="Middle Middle_search">
     <div class="wrap">
       <main class="Middle-main">
