--- a/src/main/resources/frontend/books/author.html
+++ b/src/main/resources/frontend/books/author.html
@@ -45,7 +45,7 @@
                 </strong>
                 <div class="Card-description" th:text="${book.author}">Кондратенко Александр Петрович
                 </div>
-                <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span class="Card-price" th:text="${book.price}">₽190.00</span>
+                <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span class="Card-price" th:text="${book.priceOld}">₽190.00</span>
                 </div>
               </div>
             </div>
