--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -11,7 +11,25 @@
 <![endif]-->
 <!--[if gt IE 9]><!--> <html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
 <header th:replace="~{fragments/header_fragment :: headerFragment('main')}"></header>
-<head th:replace="~{fragments/head_fragment :: headFragment('Главная')}"></head>
+<head>
+  <title>Главная</title>
+  <meta name="description" content="Описание страницы">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <!--meta( http-equiv="cache-control" content="no-cache")-->
+  <!--meta( http-equiv="expires" content="0")-->
+  <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
+  <link href="favicon.ico" rel="shortcut icon">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=64223515">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=64223515">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=64223515"><!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  <script defer src="/assets/js/scripts.min.js?v=64223515"></script>
+</head>
 <body class="Site">
   <!--if lt IE 8
   p.error-browser
@@ -31,10 +49,10 @@
             </h2>
           </div>
           <div class="Slider Slider_carousel">
-            <div class="Slider-box Cards" data-load="recommended" data-loadoffset="8" data-loadlimit="20">
+            <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="6">
               <div class="Slider-item" th:each="book : ${recommendedBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img th:src="${book.image}" alt="card.jpg"/></a>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${book.title}">Техника</a>
                       </strong>
