--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -144,103 +144,7 @@
         <h2 class="Middle-title">Книги по тегам
         </h2>
         <div class="Tags" id="tags">
-          <div class="Tag Tag_xs"><a href="/tags/index.html" th:href="@{/tags}">современная литература</a>
-          </div>
-          <div class="Tag Tag_sm"><a href="/tags/index.html" th:href="@{/tags}">классическая литература</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">зарубежная литература</a>
-          </div>
-          <div class="Tag Tag_md"><a href="/tags/index.html" th:href="@{/tags}">фэнтези</a>
-          </div>
-          <div class="Tag Tag_lg"><a href="/tags/index.html" th:href="@{/tags}">английская литература</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">русская литература</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">американская литература</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">фантастика</a>
-          </div>
-          <div class="Tag Tag_md"><a href="/tags/index.html" th:href="@{/tags}">детская литература</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">детектив</a>
-          </div>
-          <div class="Tag Tag_sm"><a href="/tags/index.html" th:href="@{/tags}">любовь</a>
-          </div>
-          <div class="Tag Tag_sm"><a href="/tags/index.html" th:href="@{/tags}">мистика</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">юмор</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">приключения</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">сказка</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">французская литература</a>
-          </div>
-          <div class="Tag Tag_xs"><a href="/tags/index.html" th:href="@{/tags}">англия</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">художественная литература</a>
-          </div>
-          <div class="Tag Tag_xs"><a href="/tags/index.html" th:href="@{/tags}">психология</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">философия</a>
-          </div>
-          <div class="Tag Tag_lg"><a href="/tags/index.html" th:href="@{/tags}">экранизировано</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">любимое</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">антиутопия</a>
-          </div>
-          <div class="Tag Tag_xs"><a href="/tags/index.html" th:href="@{/tags}">books you must read before you die</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">роман</a>
-          </div>
-          <div class="Tag Tag_md"><a href="/tags/index.html" th:href="@{/tags}">франция</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">дайте две</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">young adult</a>
-          </div>
-          <div class="Tag Tag_lg"><a href="/tags/index.html" th:href="@{/tags}">война</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">история</a>
-          </div>
-          <div class="Tag Tag_sm"><a href="/tags/index.html" th:href="@{/tags}">флэшмоб 2016</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">детство</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">жизнь</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">драма</a>
-          </div>
-          <div class="Tag Tag_md"><a href="/tags/index.html" th:href="@{/tags}">россия</a>
-          </div>
-          <div class="Tag Tag_md"><a href="/tags/index.html" th:href="@{/tags}">книжное путешествие</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">советская литература</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">триллер</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">америка</a>
-          </div>
-          <div class="Tag Tag_sm"><a href="/tags/index.html" th:href="@{/tags}">немецкая литература</a>
-          </div>
-          <div class="Tag Tag_xs"><a href="/tags/index.html" th:href="@{/tags}">вампиры</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">школьная программа</a>
-          </div>
-          <div class="Tag Tag_xs"><a href="/tags/index.html" th:href="@{/tags}">рассказы</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">магия</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">дети</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">русская классика</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">флэшмоб 2015</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">биография</a>
-          </div>
-          <div class="Tag"><a href="/tags/index.html" th:href="@{/tags}">english</a>
+          <div class="Tag" th:each="tag : ${tags}" th:classappend="${tag.value}"><a href="/tags/index.html" th:href="@{/tags(id=${tag.key.id}, name=${tag.key.name})}" th:text="${tag.key.name}">современная литература</a>
           </div>
         </div>
       </main>
