--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -52,13 +52,14 @@
             <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="6">
               <div class="Slider-item" th:each="recommendedBook : ${recommendedBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img th:src="${recommendedBook.image}" alt="card.jpg"/></a>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{'/books/' + ${recommendedBook.slug}}"><img th:src="${recommendedBook.image}" alt="card.jpg"/></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${recommendedBook.title}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{'/books/' + ${recommendedBook.slug}}" th:text="${recommendedBook.title}">Техника</a>
                       </strong>
-                      <div class="Card-description" th:text="${recommendedBook.author}">Кондратенко Валерий Петрович
+                      <div class="Card-description" th:text="${recommendedBook.author.name}">Кондратенко Валерий Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld" th:text="${recommendedBook.priceOld}">₽300.00</span><span class="Card-price" th:text="${recommendedBook.priceOld}">₽190.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${'₽' + recommendedBook.priceOld}">₽300.00</span>
+                        <span class="Card-price" th:text="${'₽' + recommendedBook.discountPrice()}">₽190.00</span>
                       </div>
                     </div>
                   </div>
@@ -82,15 +83,15 @@
             <div class="Slider-box Cards" data-load="recent" data-loadoffset="0" data-loadlimit="6">
               <div class="Slider-item" th:each="recentBook : ${recentBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img th:src="${recentBook.image}"  src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{'/books/' + ${recentBook.slug}}"><img th:src="${recentBook.image}"  src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
                       <div class="Card-sale">30% скидка
                       </div></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${recentBook.title}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{'/books/' + ${recentBook.slug}}" th:text="${recentBook.title}">Техника</a>
                       </strong>
-                      <div class="Card-description" th:text="${recentBook.author}">Кондратенко Александр Петрович
+                      <div class="Card-description" th:text="${recentBook.author.name}">Кондратенко Александр Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld" th:text="${recentBook.priceOld}">₽500.00</span><span class="Card-price" th:text="${recentBook.priceOld}">₽390.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${'₽' + recentBook.priceOld}">₽500.00</span><span class="Card-price" th:text="${'₽' + recentBook.discountPrice()}">₽390.00</span>
                       </div>
                     </div>
                   </div>
@@ -114,17 +115,17 @@
             <div class="Slider-box Cards" data-load="popular" data-loadoffset="0" data-loadlimit="6">
               <div class="Slider-item" th:each="popularBook : ${popularBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img  th:src="${popularBook.image}" src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{'/books/' + ${popularBook.slug}}"><img  th:src="${popularBook.image}" src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
                       <div class="Card-sale">30% скидка
                       </div>
                       <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
                       </div></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${popularBook.title}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{'/books/' + ${popularBook.slug}}" th:text="${popularBook.title}">Техника</a>
                       </strong>
-                      <div class="Card-description" th:text="${popularBook.author}">Кондратенко Александр Петрович
+                      <div class="Card-description" th:text="${popularBook.author.name}">Кондратенко Александр Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld" th:text="${popularBook.priceOld}">₽500.00</span><span class="Card-price" th:text="${popularBook.priceOld}">₽390.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${'₽' + popularBook.priceOld}">₽500.00</span><span class="Card-price" th:text="${'₽' + popularBook.discountPrice()}">₽390.00</span>
                       </div>
                     </div>
                   </div>
