--- a/src/main/resources/frontend/books/slug.html
+++ b/src/main/resources/frontend/books/slug.html
@@ -426,7 +426,14 @@ p.error-browser
                             <!--+div.-cartElement.-cartElement_amount-->
                             <!--    +Amount._product-->
                             <div class="ProductCard-cartElement">
-                                <div th:replace="~{fragments/postpone_fragment :: postponeFragment}"></div>
+                                <button class="btn btn_primary btn_outline" data-sendstatus="KEPT" data-bookid="[1111]"
+                                        th:attr="data-bookid = ${slugBook.slug}"
+                                        data-btntype="check"
+                                        data-btnradio="buyblock" data-check="false"
+                                        data-alttext="Отложена"><span class="btn-icon"><img
+                                        src="/assets/img/icons/heart.svg" alt="heart.svg"/></span><span
+                                        class="btn-content">Отложить</span>
+                                </button>
                             </div>
                             <div class="ProductCard-cartElement">
                                 <button class="btn btn_primary btn_outline" data-sendstatus="CART" data-bookid="[1111]"
