--- a/src/main/resources/frontend/signin.html
+++ b/src/main/resources/frontend/signin.html
@@ -10,7 +10,39 @@
 <html class="ie9" lang="ru">
 <![endif]-->
 <!--[if gt IE 9]><!--> <html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
-<head th:replace="~{fragments/head_fragment :: headFragment('Вход')}"></head>
+<head th:fragment="headFragment(title)">
+  <title th:text="${title}">Тут название страницы написать</title>
+  <meta name="description" content="Описание страницы">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <!--meta( http-equiv="cache-control" content="no-cache")-->
+  <!--meta( http-equiv="expires" content="0")-->
+  <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
+  <link href="favicon.ico" rel="shortcut icon">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=74020866">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=74020866">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=74020866"><!--[if lt IE 9]>
+  <link rel="stylesheet" href="/assets/css/DownloadBookWindowStyle.css">
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  <script defer src="/assets/js/scripts.min.js?v=74020866"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"> </script>
+  <script type="javascript">
+    $(document).ready(function () {
+      $("#locales").change(function () {
+        var selectedOption = $("#locales").val();
+        if (selectedOption != '') {
+          window.location.replace('?lang=' + selectedOption);
+        }
+      });
+    });
+  </script>
+  <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+  <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+</head>
 <body class="Site">
   <!--if lt IE 8
   p.error-browser
@@ -36,6 +68,8 @@
             <div class="Login-step">
               <div class="form-group">
                 <label class="form-label Login-title">Введите e-mail или телефон
+                  <br>
+                  <span th:if="${regOk}">Регистрация прошла успешно</span>
                 </label>
               </div>
               <div class="form-group">
@@ -76,11 +110,12 @@
             </div>
             <div class="Login-step Login-step_hide" data-type="mail">
               <div class="form-group">
-                <label class="form-label Login-title">На&nbsp;Ваш e-mail отправлена ссылка для входа и&nbsp;код. Перейдите по&nbsp;ссылке или введите код ниже:
+                <label class="form-label Login-title">Введите пароль учетной записи или
+                  перейдите по&nbsp;ссылке ниже для регистрации:
                 </label>
               </div>
               <div class="form-group form-group_key">
-                <input class="form-input" id="mailcode" name="mailcode" type="text" placeholder="Код" data-validate="key require" data-mask="999 999"/>
+                <input class="form-input" id="mailcode" name="mailcode" type="text" placeholder="Код" data-validate="key require"/>
               </div>
               <div class="form-group form-group_center">
                 <button class="btn btn_primary form-btn" type="button" name="toComeInMail" id="toComeInMail" data-send="">Войти
