--- a/src/main/resources/frontend/profile.html
+++ b/src/main/resources/frontend/profile.html
@@ -50,12 +50,12 @@
                       <div class="form-group">
                         <label class="form-label" for="name">Имя
                         </label>
-                        <input class="form-input" id="name" name="name" type="text" value="Михаил"/>
+                        <input class="form-input" id="name" name="name" type="text" th:value="${curUser.name}" value="Михаил"/>
                       </div>
                       <div class="form-group">
                         <label class="form-label" for="mail">E-mail
                         </label>
-                        <input class="form-input" id="mail" name="mail" type="text" value="addr@sait.com" data-validate="require mail"/>
+                        <input class="form-input" id="mail" name="mail" type="text" value="addr@sait.com" th:value="${curUser.email}"  data-validate="require mail"/>
                         <div class="Profile-btn Profile-btn_confirm">
                           <button class="btn btn_primary" type="button">Подтвердить
                           </button>
@@ -64,7 +64,7 @@
                       <div class="form-group">
                         <label class="form-label" for="phone">Телефон
                         </label>
-                        <input class="form-input" id="phone" name="phone" type="text" value="+70000000000" data-mask="+7 (999) 999-99-99" data-validate="require"/>
+                        <input class="form-input" id="phone" name="phone" type="text" value="+70000000000" th:value="${curUser.phone}"  data-mask="+7 (999) 999-99-99" data-validate="require"/>
                         <div class="Profile-btn Profile-btn_confirm">
                           <button class="btn btn_primary" type="button">Подтвердить
                           </button>
