--- a/src/main/resources/frontend/signup.html
+++ b/src/main/resources/frontend/signup.html
@@ -10,7 +10,39 @@
 <html class="ie9" lang="ru">
 <![endif]-->
 <!--[if gt IE 9]><!--> <html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
-<head th:replace="~{fragments/head_fragment :: headFragment('Регистрация')}"></head>
+<head th:fragment="headFragment(title)">
+  <title th:text="${title}">Тут название страницы написать</title>
+  <meta name="description" content="Описание страницы">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <!--meta( http-equiv="cache-control" content="no-cache")-->
+  <!--meta( http-equiv="expires" content="0")-->
+  <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
+  <link href="favicon.ico" rel="shortcut icon">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=74020866">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=74020866">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=74020866"><!--[if lt IE 9]>
+  <link rel="stylesheet" href="/assets/css/DownloadBookWindowStyle.css">
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  <script defer src="/assets/js/scripts.min.js?v=74020866"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"> </script>
+  <script type="javascript">
+    $(document).ready(function () {
+      $("#locales").change(function () {
+        var selectedOption = $("#locales").val();
+        if (selectedOption != '') {
+          window.location.replace('?lang=' + selectedOption);
+        }
+      });
+    });
+  </script>
+  <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+  <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+</head>
 <body class="Site">
   <!--if lt IE 8
   p.error-browser
@@ -31,15 +63,15 @@
     </div>
     <div class="wrap">
       <main class="Middle-main">
-        <form class="form Login Login_registration" action="#" method="post">
+        <form class="form Login Login_registration" th:object="${regForm}" th:action="@{/reg}" action="#" method="post">
           <div class="Login-ins">
             <div class="Login-step">
               <div class="form-group">
-                <input class="form-input" id="name" name="name" type="text" placeholder="Введите Имя" data-validate="require"/>
+                <input class="form-input" id="name" name="name" type="text" th:field="*{name}" placeholder="Введите Имя" data-validate="require"/>
               </div>
               <div class="form-group form-group_row">
                 <div class="form-group">
-                  <input class="form-input form-input_phone" id="phone" name="phone" type="text" placeholder="Введите телефон" data-mask="+7 (999) 999-99-99" data-validate="require"/>
+                  <input class="form-input form-input_phone" id="phone" name="phone" type="text" th:field="*{phone}" placeholder="Введите телефон" data-mask="+7 (999) 999-99-99" data-validate="require"/>
                 </div>
                 <div class="form-group form-group_key">
                   <input class="form-input form-input_code" id="phoneCode" name="phoneCode" type="text" placeholder="Код из СМС" data-mask="999 999" data-validate="require key"/>
@@ -51,7 +83,7 @@
               </div>
               <div class="form-group form-group_row">
                 <div class="form-group">
-                  <input class="form-input form-input_mail" id="mail" name="mail" type="text" placeholder="Введите e-mail" data-validate="mail require"/>
+                  <input class="form-input form-input_mail" id="mail" name="mail" type="text" th:field="*{email}" placeholder="Введите e-mail" data-validate="mail require"/>
                 </div>
                 <div class="form-group form-group_key">
                   <input class="form-input form-input_code" id="mailCode" name="mailCode" type="text" placeholder="Код из письма" data-mask="999 999" data-validate="require key"/>
@@ -61,8 +93,13 @@
                   </button>
                 </div>
               </div>
+
+              <div class="form-group">
+                <input class="form-input form-input_password" id="pass" name="pass" type="text" th:field="*{password}" placeholder="Введите пароль" data-validate="password require"/>
+              </div>
+
               <div class="form-group form-group_center">
-                <button class="btn btn_primary form-btn" type="button" name="registration" id="registration" disabled="disabled">Зарегистрироваться
+                <button class="btn btn_primary form-btn" name="registration" type="submit" id="registration" disabled="disabled">Зарегистрироваться
                 </button>
               </div>
             </div>
