--- a/src/main/resources/frontend/signin.html
+++ b/src/main/resources/frontend/signin.html
@@ -40,8 +40,8 @@
       });
     });
   </script>
-  <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
-  <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+<!--  <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>-->
+<!--  <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>-->
 </head>
 <body class="Site">
   <!--if lt IE 8
