--- a/src/main/resources/frontend/401.html
+++ b/src/main/resources/frontend/401.html
@@ -29,8 +29,8 @@
                                                  href="/signup.html">Авторизироваться</a>
     </div>
     <div class="form-group form-group_center"><a class="Login-reg"
-                                                 th:href="@{/oauth2/authorization/facebook}"
-                                                 href="/signup.html">Войти с Facebook</a>
+                                                 th:href="@{/oauth2/authorization/google}"
+                                                 href="/signup.html">Войти с Google</a>
     </div>
 </div>
 <footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
